# nuclearrt

./: .gitignore  README.md
exporter/: exporter.csproj  exporter.sln
exporter/src/: App.axaml  App.axaml.cs  BaseExporter.cs  BuildType.cs  CollisionMaskBuilder.cs  Compiler.cs  Exporter.cs  GameDataParser.cs  MainWindow.axaml  MainWindow.axaml.cs  PakBuilder.cs  Program.cs  Program_DEBUG  TextureSheetBuilder.cs  Utilites.cs
exporter/src/CTFAK.Core/: CTFAKCore.cs
exporter/src/CTFAK.Core/Attributes/: ChunkLoaderAttributes.cs
exporter/src/CTFAK.Core/CCN/: Constants.cs  GameData.cs
exporter/src/CTFAK.Core/CCN/Chunks/: AppHeader.cs  AppMenu.cs  BinaryFiles.cs  Chunk.cs  ChunkList.cs  ExtData.cs  Extensions.cs  (+5 more)
exporter/src/CTFAK.Core/FileReaders/: CCNFileReader.cs  IFileReader.cs  MFAFileReader.cs
exporter/src/CTFAK.Core/MFA/: AGMIBank.cs  MFAChunkList.cs  MFAChunks.cs  MFAControls.cs  MFAData.cs  MFAEvents.cs  MFAFrame.cs  MFAItemFolder.cs  MFALayer.cs  MFAObjectFlags.cs  MFAObjectInfo.cs  MFAObjectInstance.cs  MFATransition.cs  MFAValueList.cs
exporter/src/CTFAK.Core/Memory/: BitDict.cs  ByteReader.cs  ByteWriter.cs  Decompression.cs  Decryption.cs
exporter/src/CTFAK.Core/Utils/: ImageHelper.cs  ImageTranslator.cs  Logger.cs  NativeLib.cs  Settings.cs  ShaderGenerator.cs  Utils.cs
exporter/src/Events/: ACBase.cs  ActionBase.cs  ConditionBase.cs  ExtensionActionBase.cs  ExtensionConditionBase.cs
exporter/src/Events/Actions/: ActivateGroupAction.cs  AddAlterableValueAction.cs  AddCounterAction.cs  AddGlobalValueAction.cs  AddLivesAction.cs  AddScoreAction.cs  AlwaysAction.cs  AnimationSequenceAction.cs  CenterDisplayAtAction.cs  CenterDisplayXYAction.cs  CreateObjectAction.cs  CreateObjectAtAction.cs  DeactivateGroupAction.cs  DestroyAction.cs  DisplayNextParagraphAction.cs  DisplayPreviousParagraphAction.cs  EmptyAction.cs  EndApplicationAction.cs  ForceAnimationDirectionAction.cs  ForceAnimationFrameAction.cs  JumpFrameAction.cs  LookAtAction.cs  MoveBehindOfAction.cs  MoveInFrontOfAction.cs  MoveToBackAction.cs  MoveToFrontAction.cs  MoveToLayerAction.cs  MovementStartAction.cs  MovementStopAction.cs  NextFrameAction.cs  NextMovementAction.cs  PlayMusic.cs  PlaySample.cs  PreviousFrameAction.cs  PreviousMovementAction.cs  RestoreAnimationDirectionAction.cs  RestoreAnimationFrameAction.cs  SampleActions.cs  SelectMovementAction.cs  SendToOuputAction.cs  (+28 more)
exporter/src/Events/Conditions/: AlterableValueComparisonCondition.cs  AlwaysCondition.cs  AnimationOverCondition.cs  AnimationPlayingCondition.cs  CommentCondition.cs  CompareGeneralValuesCondition.cs  CompareGlobalStringCondition.cs  CompareGlobalValueCondition.cs  CompareMovementSpeed.cs  CompareObjectCountCondition.cs  CounterComparisonCondition.cs  CurrentFrameComparisonCondition.cs  CurrentLayerComparisonCondition.cs  FlagComparisonCondition.cs  GroupEndCondition.cs  GroupStartCondition.cs  IsInvisibleCondition.cs  IsVisibleCondition.cs  LoopCondition.cs  MouseIsOverObjectCondition.cs  MovementStoppedCondition.cs  NeverCondition.cs  OneActionLoopCondition.cs  OrLogicalCondition.cs  OverlappingBackdropCondition.cs  OverlappingObjectCondition.cs  PickOneOfCondition.cs  PlayerControlDownCondition.cs  PlayerControlPressedCondition.cs  RepeatWhileAKeyPressedCondition.cs  RepeatWhileMousePressedCondition.cs  RunOnceCondition.cs  SampleConditions.cs  StartOfFrameCondition.cs  TimerComparisonCondition.cs  UponClickingCondition.cs  UponClickingOnObjectCondition.cs  UponPressingAKeyCondition.cs  UponPressingAnyKeyCondition.cs  XYComparisonCondition.cs
exporter/src/Exporters/: AppDataExporter.cs  EventProcessor.cs  ExpressionConverter.cs  ExtensionExporter.cs  ExtensionFolderExporter.cs  FontBankExporter.cs  FrameExporter.cs  ImageBankExporter.cs  ObjectInfoExporter.cs  ProjectFileExporter.cs  SoundBankExporter.cs
exporter/src/Exporters/Extensions/: ButtonObjectExporter.cs  IniExporter.cs  UltimateFullscreenExporter.cs  WindowControlExporter.cs
exporter/src/Utils/: ColorUtils.cs  FileUtils.cs  StringUtils.cs
plugin/: MMF2BuilderDll.cpp  MMF2BuilderDll.h  MMF2BuilderDll.sln  MMF2BuilderDll.vcxproj  MMF2BuilderDll.vcxproj.filters
runtime/: CMakeLists.txt  Info.plist.in  Makefile.switch  README.md  build.bat  build.sh
runtime/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
runtime/extensions/ButtonObjectExtension/include/: ButtonObjectExtension.h
runtime/extensions/ButtonObjectExtension/source/: ButtonObjectExtension.cpp
runtime/extensions/IniExtension/include/: IniExtension.h
runtime/extensions/IniExtension/source/: IniExtension.cpp
runtime/extensions/UltimateFullscreenExtension/include/: UltimateFullscreenExtension.h
runtime/extensions/UltimateFullscreenExtension/source/: UltimateFullscreenExtension.cpp
runtime/extensions/WindowControlExtension/include/: WindowControlExtension.h
runtime/extensions/WindowControlExtension/source/: WindowControlExtension.cpp
runtime/include/: Active.h  AlterableFlags.h  AlterableStrings.h  AlterableValues.h  Animations.h  AppData.h  Application.h  Backdrop.h  BackdropProperties.h  Backend.h  BouncingBallMovement.h  CommonProperties.h  Counter.h  CounterBase.h  DebugUI.h  Direction.h  EightDirectionsMovement.h  Extension.h  FontBank.h  Frame.h  Frame.template.h  FrameFactory.h  GameState.h  ImageBank.h  Input.h  Layer.h  Lives.h  MathHelper.h  MouseMovement.h  Movement.h  Movements.h  ObjectFactory.h  ObjectFactory.template.h  ObjectGlobalData.h  ObjectGlobalDataCounter.h  ObjectGlobalDataString.h  ObjectInfo.h  ObjectInfoProperties.h  ObjectInstance.h  ObjectParagraphs.h  (+17 more)
runtime/source/: Animations.cpp  AppData.template.cpp  Application.cpp  BouncingBallMovement.cpp  DebugUI.cpp  EightDirectionsMovement.cpp  FontBank.template.cpp  Frame.cpp  Frame.template.cpp  FrameFactory.template.cpp  ImageBank.template.cpp  Input.cpp  MathHelper.cpp  MouseMovement.cpp  Movement.cpp  ObjectFactory.template.cpp  PakFile.cpp  PathMovement.cpp  SDL2Backend.cpp  SDL3Backend.cpp  SoundBank.template.cpp  main.cpp
setup/: installer.iss
(+65 files in other folders)
